--- a/BLH/src/vistas/RecoleccionLeche.form
+++ b/BLH/src/vistas/RecoleccionLeche.form
@@ -391,6 +391,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="jtfNacionalidad">
+              <Properties>
+                <Property name="enabled" type="boolean" value="false"/>
+              </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel11">
               <Properties>
@@ -398,6 +401,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="jtfOcupacion">
+              <Properties>
+                <Property name="enabled" type="boolean" value="false"/>
+              </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel12">
               <Properties>
@@ -405,6 +411,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="jtfEscolaridad">
+              <Properties>
+                <Property name="enabled" type="boolean" value="false"/>
+              </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel17">
               <Properties>
@@ -2200,6 +2209,12 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="jtfHb">
+              <Properties>
+                <Property name="enabled" type="boolean" value="false"/>
+              </Properties>
+              <Events>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jtfHbKeyTyped"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel14">
               <Properties>
@@ -2207,6 +2222,12 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="jtfHto">
+              <Properties>
+                <Property name="enabled" type="boolean" value="false"/>
+              </Properties>
+              <Events>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jtfHtoKeyTyped"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel18">
               <Properties>
@@ -7102,6 +7123,12 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="jtfNumero">
+              <Properties>
+                <Property name="enabled" type="boolean" value="false"/>
+              </Properties>
+              <Events>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jtfNumeroKeyTyped"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel15">
               <Properties>
